--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "postcss": "^8.4.32",
-        "tailwindcss": "^3.4.0",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^3.4.18",
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "@tailwindcss/postcss": "^4.1.16",
         "flowbite": "^3.1.2"
     }
 }
